--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ flutter:
   assets:
     - img/aaloading.jpg
     - img/picloading.jpg
-    - img/alipay.jpg
-    - img/wechatpay.jpg
+    # - img/alipay.jpg
+    # - img/wechatpay.jpg
     - img/sampleloading.gif
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
